--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,2 +1,3 @@
 v0.1.0, Nov 3 2012 -- Initial release
 v0.2.0, Dec 16 2012 -- optional ``verbose``; report results to ipython-docent.appspot.com
+v0.2.1, Dec 16 2012 -- include requests module in requirements
