--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,4 @@
 v0.1.0, Nov 3 2012 -- Initial release
 v0.2.0, Dec 16 2012 -- optional ``verbose``; report results to ipython-docent.appspot.com
 v0.2.1, Dec 16 2012 -- include requests module in requirements
+v0.2.2, Mar 14 2013 -- include ipython-docent.appspot.com integration
